refactor: immuable List로 변경